# dev.kapable.epic-runner

./: .gitignore  CLAUDE.md  Cargo.toml  EVAL_RUBRIC.md  build.rs
.claude/: settings.json
.claude/agents/: builder.md  groomer.md  scrum-master.md
.epic-runner/: PRODUCTS.md  config.toml.example  failure-analysis.md  overnight-ops.md
.epic-runner/checkpoints/: 02a8153e-56ee-4776-86ab-b7f75b968dc1.json  881dc36e-ef1f-4ad1-b41a-f6156bcdb376.json  d7973e04-fe79-4d3d-b867-df2d92a89db3.json
agents/: ab-judge.md  builder.md  code-judge.md  groomer.md  researcher.md  rubber-duck.md  scrum-master.md
docs/plans/: 2026-03-12-epic-runner-v3-plan.md
flows/: dogfood-minimal.yaml
hooks/: stop-gate.sh  track-files.sh
src/: agents.rs  api_client.rs  builder.rs  config.rs  event_sink.rs  executor.rs  hooks.rs  impediments.rs  json_extract.rs  judge.rs  lib.rs  lock.rs  main.rs  pipeline_generator.rs  pipeline_submitter.rs  repo_resolver.rs  scrum_master.rs  stream.rs  supervisor.rs  types.rs
src/commands/: backlog.rs  epic.rs  flow_validate.rs  impediment.rs  init.rs  mod.rs  orchestrate.rs  pipeline.rs  product.rs  research.rs  retro.rs  review.rs  run_sprint.rs  sprint.rs  status.rs
src/flow/: default_flow.yaml  definition.rs  engine.rs  loader.rs  mod.rs  patcher.rs
tests/: api_client_test.rs  credential_forwarding_test.rs  epic_test.rs  event_cost_test.rs  executor_test.rs  flow_engine_test.rs  stream_test.rs  types_test.rs  write_back_integration.rs
