[package]
name = "epic-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "epic_runner"
path = "src/lib.rs"

[[bin]]
name = "epic-runner"
path = "src/main.rs"

[[bin]]
name = "epic-runner-api"
path = "src/api_main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
comfy-table = "7"
scopeguard = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
futures = "0.3"
owo-colors = "4"
libc = "0.2"
urlencoding = "2"
axum = { version = "0.8", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
async-stream = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
